--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,8 @@
 
       <div id="content">
         <div id="header">
-          <h1>Welcome aboard ddTest</h1>
+          <h1>Welcome aboard</h1>
+          <h2>dd GitHub Test 2</h2>
           <h2>You&rsquo;re riding Ruby on Rails!</h2>
         </div>
 
